[gd_scene load_steps=3 format=2]

[ext_resource path="res://Menu.gd" type="Script" id=1]
[ext_resource path="res://addons/Holepunch/holepunch_node.gd" type="Script" id=2]

[node name="Menu" type="Node2D"]
script = ExtResource( 1 )

[node name="ButtonHost" type="Button" parent="."]
margin_left = 293.587
margin_top = 229.592
margin_right = 525.587
margin_bottom = 339.592
text = "Host"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonJoin" type="Button" parent="."]
margin_left = 535.266
margin_top = 229.592
margin_right = 767.264
margin_bottom = 339.592
text = "Join!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RoomCode" type="LineEdit" parent="."]
margin_left = 294.0
margin_top = 124.0
margin_right = 768.0
margin_bottom = 214.0
align = 1
max_length = 6
placeholder_text = "Enter Room Code"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HolePunch" type="Node" parent="."]
script = ExtResource( 2 )
response_window = 30

[node name="ConnectTimer" type="Timer" parent="."]
one_shot = true

[node name="FailTimer" type="Timer" parent="."]
one_shot = true
[connection signal="pressed" from="ButtonHost" to="." method="_on_ButtonHost_pressed"]
[connection signal="pressed" from="ButtonJoin" to="." method="_on_ButtonJoin_pressed"]
[connection signal="hole_punched" from="HolePunch" to="." method="_on_Node_hole_punched"]
[connection signal="timeout" from="ConnectTimer" to="." method="_on_ConnectTimer_timeout"]
[connection signal="timeout" from="FailTimer" to="." method="_on_FailTimer_timeout"]
